src/test/ui/issues/issue-33293.stderr
error[E0531]: cannot find tuple struct or tuple variant `bbb` in `aaa`
  --> $DIR/issue-33293.rs:3:14
   |
LL |         aaa::bbb(_) => ()
   |              ^^^ not found in `aaa`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0531`.
